# shade

./: .gitignore  README.md  flake.nix  hm-module.nix  meson.build  package.json  pnpm-lock.yaml  tsconfig.json
data/: desktop.in.desktop
nix/: desktop-shell.nix  devshell.nix  hm-module.nix  hyprland.nix  module.nix  stash.nix  vm.nix
nix/hyprland/: binds.nix  default.nix
src/: App.tsx  env.d.ts  main.ts  stash.css
src/lib/: colorScheme.ts  darkman.ts  gschema.ts  inhibit.ts  monitors.ts  requestHandler.ts  settings.ts  weather.ts
src/widget/: index.tsx
src/widget/applauncher/: appButton.tsx  index.tsx
src/widget/bar/: clock.tsx  index.tsx  launcher.tsx  systemIndicators.tsx  systemUsage.tsx  weather.tsx  workspaces.tsx
src/widget/common/: audioControl.tsx  notification.tsx  slider.tsx
src/widget/notifications/: index.tsx
src/widget/osd/: index.tsx
src/widget/quicksettings/: bluetooth.tsx  darkMode.tsx  index.tsx  notificationList.tsx  sliders.tsx  tray.tsx
src/widget/quicksettings/button-grid/: bluetooth.tsx  caffeinated.tsx  colorScheme.tsx  darkMode.tsx  index.tsx  powerprofiles.tsx
src/widget/quicksettings/expander/: battery.tsx  calendar.tsx  index.tsx  media.tsx  weather.tsx
src/widget/settings/: bar.tsx  general.tsx  index.tsx  weather.tsx
src/widget/wallpaper/: index.tsx
widget/quicksettings/: index.tsx
